--- a/composer.json
+++ b/composer.json
@@ -23,18 +23,17 @@
     "require": {
         "php": ">=5.3.2",
 
-        "symfony/framework-bundle": "~2.1"
+        "symfony/framework-bundle": "~2.1|~3.0"
     },
     "require-dev": {
-        "symfony/yaml": "~2.1"
+        "symfony/yaml": "~2.1|~3.0"
     },
     "autoload": {
-        "psr-0": { "Sylius\\Bundle\\FlowBundle": "" }
+        "psr-4": { "Sylius\\Bundle\\FlowBundle\\": "" }
     },
-    "target-dir": "Sylius/Bundle/FlowBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.1.x-dev"
+            "dev-master": "0.2.0"
         }
     }
 }
