--- a/composer.json
+++ b/composer.json
@@ -21,20 +21,14 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
-
-        "symfony/framework-bundle": "~2.1"
+        "php": ">=7.1",
+        "symfony/framework-bundle": "^3.4|^4.0"
     },
     "require-dev": {
-        "symfony/yaml": "~2.1"
+        "symfony/yaml": "^3.4|^4.0"
     },
     "autoload": {
         "psr-0": { "Sylius\\Bundle\\FlowBundle": "" }
     },
-    "target-dir": "Sylius/Bundle/FlowBundle",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.1.x-dev"
-        }
-    }
+    "target-dir": "Sylius/Bundle/FlowBundle"
 }
